8.0
	- specified fonts were incorrectly morphed to bold/italic according to the
          basefont, even if explicitly specified (tracked down by tpope).
        - fixed urxvt::strwidth to calculate width in the same way as screen.C.
	- fix a crash caused by passing negative widths to overlay functions.
	- give proper diagnostic when RXVT_SOCKET is too long instead of
          corrupting the stack (patch by exg).
        - urxvtd no longer crashes when the client sends an inaccessible
          working directory (reported by Roland Baer, possibly fixes gentoo
          bug #143985).
        - fixed many minor issues reported by Roland Baer.
        - Leonid Khramov spotted a minor glitch in rxvtfont.C that
          should not have any consequences, but was buggy nonetheless.
        - update to libptytty-1.0.

7.9  Mon Aug  7 18:16:07 CEST 2006
        - fix the crashing bug people encountered with 7.8 + urxvtd + perl
          + transparency. Ought to fix debian bug #380348.
	- fix urxvtc.1.pod: it actually claimed -pty-fd would not work. But
          it does! :->
	- rxvt_fatal() in case the locale string is too long for our static buffer.
        - fixed many, many, typos in the manpages (patch supplied by ves).

7.8  Mon Jul 17 21:00:46 CEST 2006
	- INCOMPATIBLE CHANGE: this version will always read ~/.Xdefaults,
          earlier versions only read it if display-resources (usually from
          .Xresources) are not set. This avoids the #1 FAQ ("why isn't my
          resource used") and seems to be logical behaviour, too. .Xdefaults
          resources have a lower priority than display-specific resources.
        - add "kuake" perl extension that does a similar thing to the kuake
          terminal emulator (see man urxtvperl).
        - use less "correct" color scaling that is compatible with libX11 and
          Xft (avoids off-by-one colors resulting in striped backgrounds).
        - the "depth" resource is now respected.